pegress/pegress.yaml
# Copyright 2017 Istio Authors
#
#   Licensed under the Apache License, Version 2.0 (the "License");
#   you may not use this file except in compliance with the License.
#   You may obtain a copy of the License at
#
#       http://www.apache.org/licenses/LICENSE-2.0
#
#   Unless required by applicable law or agreed to in writing, software
#   distributed under the License is distributed on an "AS IS" BASIS,
#   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
#   See the License for the specific language governing permissions and
#   limitations under the License.

##################################################################################################
# pegress service
##################################################################################################
apiVersion: v1
kind: Service
metadata:
  name: pegress
  labels:
    app: pegress
spec:
  ports:
  - port: 80
    targetPort: 8080
    name: http
  selector:
    app: pegress
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  creationTimestamp: null
  name: pegress
spec:
  replicas: 1
  strategy: {}
  template:
    metadata:
      labels:
        app: pegress
    spec:
      containers:
      - image: pegress:latest
        imagePullPolicy: IfNotPresent
        name: pegress
        resources: {}
